# auto_sre

./: README.md  pyproject.toml  test_sys_rep.py
auto_sre/: build_tree.py  model.py  system_representation.py
